# essay-grader

./: .gitignore  README.md  data.json  pyproject.toml  requirements.txt
essay/: Alice_FirstDraft.docx  Andy_FirstDraft.docx  Angela_FirstDraft.docx  Cheryl_Workshop2_First Draft.docx  Chloe_Workshop2 #_First.docx  Cindy_Workshop#2_First.docx  Cosette_Workshop2_first.docx  Daniel_FirstDraft.docx  Danny_Workshop2_First Draft.docx  Daren_FirstDraft.docx  Derick_FirstDraft.docx  Erin_Workshop#2_first.docx  Harper_Workshop2_FirstDraft.docx  Jamey_FirstDraft.docx  Jeffrey_Workshop2_First Draft.docx  Jessie_FirstDraft.docx  Jolie_Workshop#2_First.docx  Karen_FirstDraft.docx  Katie_FirstDraft.docx  Ken_FirstDraft.docx  Keysha_FirstDraft.docx  Landy_workshop2_first draft.docx  Leo_FirstDraft.docx  Leslie_FirstDraft.docx  Maggie_FirstDraft.docx  Marshall_FirstDraft.docx  Michael_FirstDraft.docx  Miko_FirstDraft.docx  Naomi_FirstDraft.docx  Nicola_FirstDraft.docx  Noelia_Workshop#2_First.docx  Patrick_Workshop2_First.docx  Peggy_Workshop2_First.docx  Raj_FirstDraft.docx  Ruby_Workshop2_First.docx  Shannon_FirstDraft.docx  Sharon_Workshop2_First.docx  Tzuchi_Workshop2_FirstDraft.docx  Vincent_FirstDraft.docx  Vivian_workshop2_First.docx
essay_judge/: answer.json  interface.py  interface2.py  interface_methods.py  llm.py  mail.py  main.py  process_essay.py  reader.py  records.py
essays/: b08207008_LivinginTaiwan.docx  essay.md  r12227112_TheImportanceofSustainableEnergyforaResilientFuture.docx
essays2/: r12227199_living_in_taiwan.docx
evaluation/: evaluation.py  plot.py  (+1 more)
